--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
   <casualfeeds-app>Loading...</casualfeeds-app>
@@ -26,6 +27,6 @@
   
 
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ng2-bootstrap/1.0.17/ng2-bootstrap.js" type="text/javascript"></script>
 </body>
 </html>
